--- a/masjid-management/src/components/TransactionsList.css
+++ b/masjid-management/src/components/TransactionsList.css
@@ -105,7 +105,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 768px) {
   .add-transaction-btn {
     width: 40px;
     height: 40px;
